--- a/apps/dashboard-mfe/project.json
+++ b/apps/dashboard-mfe/project.json
@@ -26,13 +26,13 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumWarning": "1mb",
+              "maximumError": "5mb"
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
+              "maximumWarning": "10kb",
+              "maximumError": "10kb"
             }
           ],
           "outputHashing": "all"
