--- a/apps/chess-mfe/project.json
+++ b/apps/chess-mfe/project.json
@@ -50,6 +50,7 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": { "port": 4201 },
       "configurations": {
         "production": {
           "browserTarget": "chess-mfe:build:production"
