--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nrwl/workspace": "15.6.3",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/p5": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "cypress": "^12.2.0",
